# foobar

./: Cargo.toml  README.md
src/: lib.rs  main.rs  protocol.rs
src/widgets/: datetime.rs  mod.rs
